k8s/02-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: pulsar-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 192.168.100.10:5000/frontend:latest # latest diganti biar best-practice
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pulsar-app
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 3000 # container
