k8s/03-authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: pulsar-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: 192.168.100.10:5000/auth-service:latest # latest diganti biar best-practice
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: pulsar-app
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
