k8s/04-userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: pulsar-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 192.168.100.10:5000/user-service:latest # latest diganti biar best-practice
        imagePullPolicy: Always
        ports:
        - containerPort: 8080 # http
        - containerPort: 9090 # gRPC
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: pulsar-app
spec:
  selector:
    app: user-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 9090
    targetPort: 9090
