k8s/05-eventservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: pulsar-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: 192.168.100.10:5000/event-service:latest # latest diganti biar best-practice
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 9092 
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: pulsar-app
spec:
  selector:
    app: event-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 9092
    targetPort: 9092
