k8s/external-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-router-external
  namespace: pulsar
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo-router-external
  namespace: pulsar
subsets:
  - addresses:
      - ip: 192.168.100.50
      - ip: 192.168.100.51
    ports:
      - port: 27017
